--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ﹑⟡ 　﹒ *@ yumii . ﹒◞ Pluh! . . 
-![image alt](Untitled539_20250317003638.png)
+![image alt](ca809f62b34eda60f1f592699cbfb161.jpg)
 𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟 
                         📷⠀  ｡ *:yumi
                                       ★   ◞        *pronouns:* any/they
