--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ﹑⟡ 　﹒ *@ yumii . ﹒◞ Pluh! . . 
-![ScreenShot](screenshot.jpg)
+![ScreenShot](Untitled540_20250317004310.png)
 𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟 
                         📷⠀  ｡ *:yumi
                                       ★   ◞        *pronouns:* any/they
