--- a/README
+++ b/README
@@ -8,9 +8,9 @@
                                                 🫧 ˚ .  PJSK, ALNST YOO!!!!
                               ◞ ˚  𓈒 ✦ * FLIPINO PLUHHHH!!!
                                                         𓈒 🎀     .     ★✦  * @TheDEVIOUSyumi!
-                                        Discord? I gotchu! -- ' yumiimia. ' or you...can join vvdky pictures to also meet me there      ✦ * 
-                             🍰    .                    I also like making Card Edits/Art of my pjsk oc, Yumii, you see!!! 
-                                    right there!! brown pink head iluvher!!
+                       Discord? I gotchu! -- ' yumiimia. ' or you...can join vvdly pictures(discord link) to also meet me there      ✦ * 
+                             🍰    .        I also like making Card Edits/Art of my pjsk oc, Yumii, you see!!! 
+                              
               ❱ I yap more about her in vvdlypictures so heh! go join the disc server!!!
 𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟
 
