--- a/README
+++ b/README
@@ -11,6 +11,6 @@
                        Discord? I gotchu! -- ' yumiimia. ' or you...can join vvdly pictures(discord link) to also meet me there      ✦ * 
                              🍰    .        I also like making Card Edits/Art of my pjsk oc, Yumii, you see!!! 
                               
-              ❱ I yap more about her in vvdlypictures so heh! go join the disc server!!!
+              ❱ (JOIN VVDLY PICTURES WE'RE COOL PLS, PJSK FANDUB!) join for nen as wel
 𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟
 
