--- a/README
+++ b/README
@@ -1,16 +1,5 @@
-﹑⟡ 　﹒ *@ yumii . ﹒◞ Pluh! . . 
-𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟 
-                        📷⠀  ｡ *:yumi
-                                      ★   ◞        *pronouns:* any/they
-                      ✦◞ 𓈒 * 
-                            ˚  𓈒 🍡  heyyyoopoh gang!
-                 𓈒 . - - ★ Hobbies? Heh! Drawing, Editing, Singing and Pluhhh
-                                                🫧 ˚ .  PJSK, ALNST YOO!!!!
-                              ◞ ˚  𓈒 ✦ * FLIPINO PLUHHHH!!!
-                                                        𓈒 🎀     .     ★✦  * @TheDEVIOUSyumi!
-                       Discord? I gotchu! -- ' yumiimia. ' or you...can join vvdly pictures(discord link) to also meet me there      ✦ * 
-                             🍰    .        I also like making Card Edits/Art of my pjsk oc, Yumii, you see!!! 
-                              
-              ❱ (JOIN VVDLY PICTURES WE'RE COOL PLS, PJSK FANDUB!) join for nen as wel
-𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎢𓎟𓎟𓎟𓎟𓎟𓎟
-
+﹑i make pjsk ocs..idk..uhh!(server still in wip but whatever)
+Pjsk themed oc server, Mascot my main oc, Yumi!!
+has 7 units idk
+hey..if u wanan join...uhh...just add my user ill give you a link later because im lazy...😢😢😢 but i could yap to you about my pjsk ocs if u want 
+since server IS NOT DONE!!
